syntax = "proto3";
package grpc.parcel;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "svc-storage-grpc.proto";


// Response struct returning an [Object] on success and [ValidationResult] if invalid fields were provided
message Response {
    // struct with field -> error pairs to provide feedback about invalid fields
    grpc.ValidationResult validation_result = 1;
    // Object struct with id [String] in [Uuid](uuid::Uuid) format and [Data] struct with parcel data
    optional Object object = 2;
}

// Object struct with `id` and `data` field
// * `id` [String] in [Uuid](uuid::Uuid) format
// * `data` [Data] struct with parcel data
message Object {
    //id UUID v4
    string id = 1;
    //data
    Data data = 2;
}

// UpdateObject struct with `id`, `data` and `mask` fields
// * `id` [String] in [Uuid](uuid::Uuid) format
// * `data` [Data] struct with parcel data which should be used for update
// * `mask` [FieldMask] struct with parcel fields that should be updated
message UpdateObject {
    // `id` [String] in [Uuid](uuid::Uuid) format
    string id = 1;
    // struct with parcel data which should be used for update
    Data data = 2;
    // struct with parcel fields that should be updated
    google.protobuf.FieldMask mask = 3;
}

// Parcel Status Enum
enum ParcelStatus {
    // Has not been dropped off
    NOTDROPPEDOF = 0;
    // Has been dropped off
    DROPPEDOFF = 1;
    // En Route (could be a number of vertiport hops)
    ENROUTE = 2;
    // Arrived at destination port
    ARRIVED = 3;
    // Picked up by recipient
    PICKEDUP = 4;
    // Transaction complete & parties have been notified of the
    // completed transaction
    COMPLETE = 5;
}

// Data struct with parcel data
message Data {
    // the itinerary UUID associated with the parcel
    string itinerary_id = 1;

    // the status of the parcel
    ParcelStatus status = 2;
}

// Struct containing a `list` of parcel [Vec\<Object\>]
message List {
    // array/vector of parcel items
    repeated Object list = 1;
}
